<resources>
    <string name="app_name">Homeworks</string>
    <string name="tittle_activity2">Информация о пользователе</string>
    <string name="login_info">Ваш логин:</string>
    <string name="password_info">Ваш пароль:</string>
    <string name="timer_start">10</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="button_text">Timer -1</string>
    <string name="btn_close">close</string>
    <string name="enter">Войти</string>
    <string name="brand">Брэнд</string>
    <string name="code">Штрих-код</string>
    <string name="mars_img_url">https://images-na.ssl-images-amazon.com/images/I/41AeTKhQ8vL._AC_.jpg</string>
    <string name="snikers_img_url">https://snickers.ru/static/media/pr-26.f475d7bd.png</string>
    <string name="picnic_img_url">https://www.treasureislandsweets.co.uk/user/products/large/cadbury_picnic_bar.jpg</string>
    <string name="picture_link">data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAoHCBUVFBcVFRQYGBcaGyAbGxobHBsgIh0dHRsgGxodGh0gICwkIB4rICAdJTglKS4wMzMzGiI5PjsxPSwyMzIBCwsLEA4QHhISHjwqJCoyMDI0MjMyPTI0MjIyNDAyMjIyMjIyMjQyMjIyMjIyMjIyMzIyMjIyMjIyMjIyNDIyMv/AABEIAKEApgMBIgACEQEDEQH/xAAbAAACAgMBAAAAAAAAAAAAAAAEBQADAQIGB//EAEYQAAIBAgQDAwkECAMHBQAAAAECEQADBBIhMQVBUSJhcQYTMoGRobHR8FKyweEUFSMzQmJyooLi8TRTVJKjwtIkQ3OTs//EABkBAAMBAQEAAAAAAAAAAAAAAAECAwAEBf/EACgRAAICAgIABgICAwAAAAAAAAABAhEDEiExBBMiQVGBYXEU8ZGh0f/aAAwDAQACEQMRAD8A8tt8Jae1oOZOnsNZfgzRKNn8Aac2cVlElR03j4VXi8VAkCCdNGMR3jnUN5HTHHFiBMISYmCN/wAhuaIXh07NPUwdPEGCB31fnJGWQNzPPSIE1taxTCIIHZHjMGi5SKRx47plY4L/AD+786x+pv5/7fzo2ximhgFLAAExpGmp6ATV9m8TBMiZ0zHTx+ulBykiekboV/qY/b9351P1Kftj2D/yp4uIj+GfFm+dbWb4DNmSRl0EnQnbXp3UvmSD5cRF+pv5/wC3/NWP1P8Az/2/5qctcnQLqdoY/jWyP4k/1N/5D4UfMkDy4iT9Tj/ef2/5qw3Cejz6vzp892FOpJ3kM4A02Ha95oW+15QjMjBXXOpLNqgMFt9pBoqcmBxihT+grEEkMNzyI7tN+6ovDgRIYjxGh9ZijxfzaH3lvnWjXShAB0OhG42nSa20vYpFQfDQIeEkEZmAnmRp37HX1V0djyYsXrQNpwLogFQ+jSwkgMsgxykDbXqiGJJWDEQdO+ND40x4RxNrYPaYA/ZJMH7WQnK22x7ulHaXuJkhGL9IJxXgJsuEYFZOhJ0I5kUQnCreW2EVjcJABEu2eYGZSoQJInmSDrXX4jiK31VfNq0poXILQZBbVgE57da4XEYhkzKIyhiI3gEARND1fIYuMk7XI8NnCyFuWl2XMbZUmRoTIHPXQdRrzobE8BW+ly5h2DsI/ZgBSusdqTqTyAgAadBQWJ4ocgy+bRRACJyAg6kgkn18zRnkjjmN51zQWTTXmB0OhaJjnRi5CzjGuOzk71sqSpEEGDUpr5RJN0tmJzQdZkaazNSqpkB/jMGXt5lBAzqg8SrEDc67f81I8Zba2CH0IaPdI9oM10GFxZtp5q5DIWRkcDSVvW2Ou4OUN2e80H5Y4fLbsvHpiCerWy9sn1hUPrqaopbQiF1PtcvjWpuqAO13Vrh7QiSoI7/yNWMqR6Cj2/OmpDbSuwjCY0Krqr5Q4yuPtCQY8JFXHFISSXGpBIAGkCAJJpf5oAQUWeuvzrVLa9AaDimLbuxoMdaiM1bHGWvSDncAqfsgDXxnNSjIJ9Ae/wCdTIOgpdIlFuxumNtKZDT4mPga1/WFvu9p+dKRZHSs+YHShrEp5cxqeIW/o1ScYu2eRGXXkJ2WdqXmyOlY8yOlMkl0LLHL3GHn7XX2n8qpvX0JEHagzbHStig6D31lFCtSRYby9aJs4y0ogifbQWQdBWRbH2R76NJityscYbiyKdJA5glSPZpPrpVjLyknK069CPrWq3tDkPr21s1kaaDWNp9tHgRWi1sVNvKFQAbndjpBidp05VZwa+i3A7GIU6a6mIA05bUHZsylw81j70URcwoCk/XKPjW4XBrlI34ldFwjJAA5SOf18KxSqpTiD/B43IuQksjaMvIAbEk7a6jpvRnG8bnwaJJIW4Ms7ifOF/ig/wAIpDazN2V7TEQAJk6coo3iTlrSEA5Vdu1GksB2Z6gKDH83fSNKxk7VMpt6J7I9lSfZWbXojwFZy0rZ1RhZXy56beG8VAtb1IobFY4jXLUC1vloyxhJ9M5R05/lSSmkO1DGrk6AgtWNaIAJUgHYkHXwrpcBgremRCT1Ik+/Qequjw/CCw7UR0YCD4yKg8/4IfzI3wuDzTLWpWu+x3kijDMgKDmykMu/QH3aUNf8igLZdb8mDllQATyBObTp660fEQl7lV4jFJfBxBWtSKIuW4MHcVWVmumMrGlFNWuisCpFbRWYp0cc0aKDzP1vWcnPlOo/LxrZ+un186ww5wN4PPfUTt9CiSbCeHKP0bEEiRCx3HMfwqzEkebPQj5kfCsYC2ThrsXLcQCULEMYLRAiG9ulTEGbZPdPxpJd/Y8Xx9CGpWTUqxEfjE2z2gCIOaVtqmqgkANmJBkdKq41jmuBM3ZA1VNYAJJLAnUljJJ5nugCXVGVoAG/3Wqvi5BSx/R+P+tRj2isjVGECrMk7VUh0FFWF0FJklRfJN44KS+SjLWwWjSARBHr6eFUtZ6GR4a+ypbWWw+Mxy4lwyKwXbfr9bVfhbZZhAk9KGtoSZp/weFktA6E1LJLVWeTOcpu2x5h2W0sQC8eoePypdiOI5mglnPQSfYBWeEJ+mYu1YzkI7HMdiQoJYieZiPXXW8SuYHC3fMDBqU0VmzMGJy5tDuTE+J2qMMEpK5MEYuZynCOJnzihQQCwU7xr1q3i/E2e4baKWIMabb7j186J4lwrzeNa1bOhIBWJ2JjXf0eVPL3D2wWGz2rXnL7OWLsmdoAJRYIMH+GQIB8aVYob0FY7etnm3GsMyspZSrtMgiNtj66VV1nljj7mLuLeyyLdtUcryOZiSYPVokaTp0rlWFd0KSpM9rw8U8SSd1waEVqRVlYK10RZDLA0rQnXXTbXlvrPuqwrVbj69dMjkkgyxa/9I7F7QloVJBuGCSWCjULyk9Ky4m3H8h92atcJiWGEuoAoUsoYhVzHUkS+8axA0qy+IVh3N8W+vbSS7+wx6+jn6lSpViQ8unst36D1q4HxrHFcNlRC5Kv2QqMGkoRq8+iBIjLvrWt89jSDEHu0Jq/jdkpbQZrpBMlbigAEyQbZBIykctNvCox9isgNNvZTHApI9f4UuWj8DfCb7Hn0qOW2uDsz4nLC1FW+AwW45VbfwyxOk/W9aX20DA6HnWi2WI0b21yc92eGUYS52obmZr0TybwVtlhl3GpkD31581pUCmZYN2o6H8Ziui4ZxcIBOtLnWytFYtHW3fJTBtJLONeTDcdNN6Ku2raAMcRmdPQuXUR7iDuuFZPi0kcjXKYnymA21NJbmLu4l8oMDmeg5+upY/MrukNul0hseNiw9zzBN67ycyQJ3JJ1LT8KCs8QxbF3vZmJgkBmllntKIMAFZEbU84fgLaKqKgjeYkk9Sad4PhloCWQHxJ+dIsqtpL7fYtNinB+VeHQebSz5uNMrAA69QPGuU8rsJZR0uWlCi5mLKvoiMuqjkDJ026RXZeUnBLdy3KgB1GhHL8u6vNsfnBCvPZmJnrrHsq/h2nK4v9o7fBSl5qjfHIEDFZdawayp5GvQiz1MuP3NaruCrSK0caVVM4csDODacNeH8yn3x8qMxfot4N8XoLh5/YXvFB7T+VGY0jK/r+LUsu/shHr6OdqVKlXIju8OwR9fxVrxi2oNorEtbVm8ZPv762ujQ+P/ax/CtOMXcxtcotIO7xFRj2Wl8mo0Gu1MuG8PN3Z1HvJ8B8yKVYi1t3nSrsJdexcW5Egb+FLKH55Ol+LlXpVHQ8XwC4a1nSW+0GPq0jb8hS3CYwMOwdOYO49X412dywuJtHYgpIry64rWrhGxVvganGEZpr3ODLFyez7HtyyzDRWIPMKSPcKHt3CNDuPqK7XhnEBcsh51VZI8BP4VzHCLBds+kyWLMNBJ3jm29QjK0010c8bfAVheGsQpuHzYbaYzH1TXQYHhuRR5tw3iI/KgsLxRhcNrDWluPqbj3D6QA1UnlyHQEimnD3zSyo1ozDIdVnrbYaH1E+qo5ceWS4RR42qD7Fxge1pR6Ygd9B3reqKYzNqJ5kCYHqBNXW8K1cM8ero1UbefkkHbakHEeFpda3bbRe12hErGundqNOccq6BMIeZrJwiZkTMoZzlQMQMx3MDc6STFHFspcDRck049nkmJtZHdMwbKYkUdwHhZxF0LrkXtOR06DvJ09/KvVsP5M2ktMioO0zFy8EuZIztpGvIDYGOpqnBcDt2FcW1AztmMSdtAAd47uUnrXsbJK2z0/5blDWuTx69aKsykaqSPYYNUvtTjypw3m8XdHItmGkaMM34xPdSW6TB1q0HY+RXG/wZ4cv7G8eUoPXnnfwBoq/qh/pJ9mahMD+5vac0+99eyirvoH+lvcWFNLv7OCPX0IalSpViQ9bRWOvP7lz50NxHe1v+7T6Hw9VFMOw0fZP3WBobiTSbX/xpUYFZ9Fi5nGaPRai0xStmVxEjSqMPeNsERMmfVWMZfV3DKOUGklFylTX6Y0Woxtf4H3klxFgr2Se0ASk9J1FLuNYHMxYiDNAKSpDoYZdQa6+1eTFWxdHpL2bi9DvI99acdHsiadnJYG9ctK67q6lSOWoimNvE+aw7FfSZgq+Mb+rU0PxPCm0+X+FtVPXuq27bm3bYqXRHzOq7kHoKSVNq/ck0lLk6LyVwotWix1d4J6gbifHf1iuq4bhsxk1xmF8q8MD2kdesqD6okfQp7gfKhbqumFV/O5SFZ0VUUnTOzS2g3AjUgCp5d6+Dpk1dsaeUfEAmHv3bFtS9h7dhHILZrhYG6sEwQAVXQDtZt4Fcr5SeUWKweJuYZWQ5AhYlASXe2ruR/LnYgDkAByp1w7DrYwosXLvnALvnjlBB85oRLkyQCoPKTvUueUIUs6W0NxtS7KMzdMzRJqLy4+krI+ZFPoH4Pi+I4hDmVLINt3S5kJLsrZQmUsQpJPNZhSQDvS7B+SmMN+zfuXFZ1KXLgdxmBV5yDVp7IBnQdqOVHYjjGKuj0iJ3CiB86XXrNwHXfnr8amszTeqSB5tdI9CfiKKnnLlxLYO5LQJBg66E8vaKS4/y6wyghM90/yKQD07TRpPMA+uuD4w+RnEy4Ak9wkBfARPrpfiCq21jc9pSOY5qflVYYVKnK+S8HslIJ8ouLfpV3zvm8nZCkZi0wTBJgcoEDpSa9tRjJmXMvMTQj7GuxR14O+Mozhx/Rjh/wC5vafY++KOxY0bwf77/Xqpfgmi3eGv8B9jx+NMcaSVcnchvbmYmnl2efHo5ypUqVYiPMsoRMdkn3MQPwqviqENaBP/ALaaaaCNK3ukhG6xH3qzxlgTYg6i2oPjNRh2is+mZujtoOu9X8MsrmuBuvOq8SYKNyB1ojPbuPA7M8+tLnk61/2HCldmuMwmQZlMjnWOE484e6rjW2xC3B1B0PxrSy57dtjpyqk2oGU0cUZONS5/4Lk12tHZ8ZwCXEyfwsM1t/wnxrm+G4o23Nq5o2wPInv6GmvknxEMpwt0zrmtk+Ex7vfWnlBhQtzVdxv1rnkq9EhZRU0X4fC2bjQVGY8wNSad2LVu1bKIAJ3I0Olcvw/iBQhQyqWMFyO1HSeXj7a6G1HOuDNtF0+jmdxdM0dGfw+PjVmGwAkGKua4o2rC4waAanoKjbrgKHS5QBtQWPVSQRvSTinEig7ZyTtm+tfAUfwiL6ecVxk1CmDJI6zsKZYpNWkMrl0cZj3m/dP8xFLrthi9tAJUtoPHcVeQczZozZmmNpJO3dV4JUSPSG3sive0qCS7SKQ9NIGw5VS6BtA5C69K0xtqBPI/GpasoiIWM3GIZfCYg+OtG4pZRvCsqkv0WjN43fyKcGP2V7/B97/X3UZjV7DCZjn19IT+NCYP9zfMfZH91E3TNs/0z96aWXZl0IalSpViI6xPot4/g31/rW3FcSG81CWllQTkUAyCR223LHc+qsXllW8f+y5V/G7qm1Zym0xC+kqstwTJyXOTRp2hUo+xSZnEgG2Z6UPguHm5bzhu0NtaFuYtysE+qPxrXh2Oa22m3SjkTcfT2bG1F8heFD5yHBkUU4mqTxNSSSNTWrcQQ9aaN0rEl3wZZSCrKYYGQa7/AIJft4u0pdQbiaMD7Pwrzs45e+ieF8Z8zcVwTHMDmKnlhsuOzRlQf5ZcFaw3nEnzbH2EiYozyJ4lmBtu0kbT8KO4p5X4a7ba21tmzDboetcLZui3czIxAB571F43lx6yXIuWCkuD1DF2ddqHtpBgUmbyytsq5lbMBGlDXfKtD6IIrzV4fN1RzLHIdeVOGFzCsY1XXwoPyA4kLdm4r7All79NRH40oxflPmVgAYOhrZONomFKBj5x9xliJ3luenKu3DimoayXudGGOq5BEbMxb7RLe0zUxLQpNC28eg61L+PQqQJ2r0QljW1W1LGXZlCj7Kgz86NxPoN4Uot3kARySXDS3hECPCib3EkKkAHUUkFV/spJ9foEwrfsrw7lP9wHyot9EP8AQ3xYUNgULWryiZOSB11Og75iibnof4W+89LLv7Gj19CKpUqVUkdDexVggKquj5h22aRvuQIAiZkCeVE43iQyQbfYc53JhWuEggMSo0UQYWdyTqTpzLXSd6Z8TYebskGSyTv6IUlQPGZJ9VT1qh9iHFWOWHH/ADmstj7XLDIP8VKvOGpnNHU2w7w3FkWFZM1sdoKTI84qFUb2QCNqynELYTIVzN+0LONC5dQqEyZ7PaMaDXnvSTOamfuFHUFjdcXhwAP0YHvzn51pdxGHkZcOQB1uflSrNUzmhqNshit+z/uP+oflWTiLP/D/APUPs2pd5w1jNR1F2G1nEYcelh55j9p8eo7qzexNgrAw4U/aDye470nzVnOaGodh1j8dZuO7LZgMQdW1XTtAa7H3Vfi+M2385+wUF3Q9kwFRFhbYWdidSetc/nNTzho6gsajHWog4ZPHNWBibEf7OP8A7KVZ6wWoah2GbXrJP+zgDuuR8ZrLX7P/AA6+q4aWZzULmjQNkdNh+Iqls5BLKmXOY/Zo5nIjQWzalc/LtADWQJhsZZKvntuSQQAreiNdcxnrtEc6Gwij9HvMWgyihepJmT3AA0uFwiYpVFch2JciTEgTpJ1jvMCalV1KoISjMZ+7s/0H/wDS5UqUGYDqVKlExKlSpWMSpUqUDEqVKlYxKlSpRMSpUqVjEqVKlYxKlSpWAG2v3Fz+tPu3KCqVKCCSpUqUTH//2Q==</string>
    <string name="show_sweets">Отобразить конфеты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_fragment">Show Fragment</string>
    <string name="button_to_homework_6">Button to homework 6</string>
    <string name="button_to_homework_7">Button to homework 7</string>
    <string name="button_to_homework_10">Button to homework 10</string>
    <string name="button_to_homework_13">Button to homework 13</string>
    <string name="enter_text">Введите текст</string>
    <string name="button_to_homework_16">Button to homework 16</string>
    <string name="button_to_homework_17">button to homework 17</string>
    <string name="search_on_limit">Поиск по лимиту</string>
    <string name="search_on_id">Поиск по id</string>
    <string name="show">show</string>
    <string name="sort_on_id">Сортировка по name</string>
    <string name="enter_currency_limit">Введите лимит валют</string>
</resources>