<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bv_btn_to_homework6"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/button_to_homework_6"
        />
    <Button
        android:id="@+id/bv_btn_to_homework7"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/button_to_homework_7"
        />
    <Button
        android:id="@+id/bv_btn_to_homework10"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/button_to_homework_10"
        />
    <Button
        android:id="@+id/bv_btn_to_homework13"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/button_to_homework_13"
        />

</LinearLayout>