<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homework7.Homework7">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="50dp"
        android:text="@string/timer_start"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:hint="@string/enter_login"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_password"
        android:visibility="gone" />

    <Button
        android:id="@+id/tb_btn_for_timer"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/button_text" />

</LinearLayout>