<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homework7.Homework7Activity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_baseline_cake_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_info"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_info"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        android:layout_marginStart="15dp" />

    <Button
        android:id="@+id/bv_close"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="20dp"
        android:text="@string/btn_close"/>
</androidx.constraintlayout.widget.ConstraintLayout>