<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homework17.Homework17Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cb_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_on_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_currency_limit"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_currency_limit"
            app:layout_constraintHorizontal_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_currency_limit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bv_through_limit"/>

        <Button
            android:id="@+id/bv_through_limit"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@+id/et_currency_limit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/et_currency_limit"
            android:text="@string/show"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_currency_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/search_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>